# vrm-desktop

./: .gitignore  .oxfmtrc.json  CLAUDE.md  README.md  aqua.yaml  index.html  package.json  tsconfig.json
.github/workflows/: ci.yml
apps/electron/: .oxlintrc.json  CLAUDE.md  index.html  package.json  tsconfig.json
apps/electron/src/: global.d.ts  index.css  main.ts  preload.ts  renderer.d.ts  renderer.ts
apps/tauri/: CLAUDE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/src/: main.ts  style.css  tauri-bridge.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: main.rs
apps/web/: CLAUDE.md  README.md  index.html  package.json
apps/web/public/config/: config.sample.json
apps/web/src/: main.ts
src/: CLAUDE.md  animation-controller.ts  main.ts  main.web.ts  scene.ts  vrm-loader.ts
src-electron/: CLAUDE.md
src-tauri/: CLAUDE.md
src/adapters/: types.ts  web.ts
src/core/: types.ts
