[package]
name = "vrm-desktop"
version = "0.1.0"
description = "VRM Desktop"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
